--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -314,6 +314,15 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
+                            <a href="#"><i class="fa fa-forumbee fa-fw"></i> Форум<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action(MVC.ForumParts.Index())"><i class="fa fa-envelope"></i> Разделы</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
+                        </li>
+                        <li>
                             <a href="#"><i class="fa fa-cog fa-fw"></i> Seo оптимизация<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
