--- a/GE.WebUI/Content/less/colors.less
+++ b/GE.WebUI/Content/less/colors.less
@@ -8,3 +8,7 @@
 @color-gray:#d7d7d7;
 @color-light-gray:#e0e0e0;
 @color-green:#029119;
+
+@color-forum-txt:#616161;
+@color-forum-border:@color-bg;
+@color-forum-blue:@color-dark-blue;
