--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -222,3 +222,19 @@ footer .middle div[class^="col-"]:last-child{
     @media (min-width: @screen-lg-min) {
     }
 }
+
+footer .third{
+    text-align:right;
+    @media (max-width: @screen-xs-max) {
+        text-align:left;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
