--- a/GE.WebAdmin/Content/sx/less/sx-grid-view.less
+++ b/GE.WebAdmin/Content/sx/less/sx-grid-view.less
@@ -2,7 +2,7 @@
 @import (reference) "../../../bower_components/bootstrap/less/variables.less";
 
 .sx-gv a {
-    color: inherit;
+    color: @color-orange;
 }
 
 .sx-gv th {
