--- a/GE.WebAdmin/Views/Request/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Request/_GridView.cshtml
@@ -8,22 +8,24 @@
 
 @Html.SxGridView(
         new SxExtantions.SxGridViewSettings<VMRequest>
-    {
-        UpdateTargetId = "grid-request",
-        Data = Model,
-        Columns = new SxExtantions.SxGridViewColumn[]{
+        {
+            UpdateTargetId = "grid-request",
+            Data = Model,
+            Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="DateCreate", Caption="Дата посещения"},
             new SxExtantions.SxGridViewColumn{FieldName="SessionId", Caption="Идентификатор сессии"},
             new SxExtantions.SxGridViewColumn{FieldName="Browser", Caption="Браузер"},
             new SxExtantions.SxGridViewColumn{FieldName="ClientIP", Caption="IP клиента"},
             new SxExtantions.SxGridViewColumn{FieldName="UserAgent", Caption="Строка агента"},
             new SxExtantions.SxGridViewColumn{FieldName="RequestType", Caption="Тип запросв"},
-            new SxExtantions.SxGridViewColumn{FieldName="UrlRef", Caption="UrlRef"},
+            new SxExtantions.SxGridViewColumn{FieldName="UrlRef", Caption="UrlRef",Template=(col, val)=> {
+                return string.Format("<a href=\"{0}\" target=\"_blank\">{0}</a>", val);
+            }},
             new SxExtantions.SxGridViewColumn{FieldName="RawUrl", Caption="Целевой адрес"}
         },
-        Filter = filter,
-        SortDirections = sortDirections,
-        EnableEditing=false
-    },
-        new { @class = "table table-condensed table-bordered table-responsive table-striped" }
+            Filter = filter,
+            SortDirections = sortDirections,
+            EnableEditing=false
+        },
+            new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
