--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -89,23 +89,24 @@
     }
 }
 
-.m-info .vote i{
+.m-info .like i{
     font-size:1.5em;
     cursor:pointer;
 }
-.m-info .vote i.up{
+.m-info .like i.up{
     color:@color-green;
 }
 
-.m-info .vote i.down{
+.m-info .like i.down{
     color:@color-red;
 }
 
-.m-info .vote span{
+.m-info .like span{
     margin-left:10px;
-    font-size:1.5em;
+    font-size:1.2em;
+    font-weight:700;
 }
 
-.m-info .vote span.up{
+.m-info .like span.up{
     margin-right:@def-pad*2;
 }
