--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -15,7 +15,7 @@
     <div class="m-info">
         <div class="row">
             <div class="col-md-6">
-                @Html.Partial(MVC.Votes.Views._Vote, Model.Info)
+                @Html.Partial(MVC.Likes.Views._Likes, Model)
             </div>
             <div class="col-md-6">
                 <div class="text-right">
