--- a/GE.WebUI/Content/less/forum.less
+++ b/GE.WebUI/Content/less/forum.less
@@ -10,6 +10,7 @@
 
 .forum a{
     color:inherit;
+    text-decoration:none;
 }
 
 .forum h2, .forum h3, .forum h4, .forum h5, .forum h6 {
@@ -51,7 +52,20 @@
 }
 
 .forum > .part > .p-content {
-    padding-bottom: @def-pad;
+    @media (max-width: @screen-xs-max) {
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        padding-bottom: @def-pad;
+    }
 }
 
 .forum .theme {
@@ -60,17 +74,56 @@
 }
 
 .forum .theme:hover{
-    background-color:@color-forum-blue !important;
-    cursor:pointer;
+    @media (max-width: @screen-xs-max) {
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        background-color:@color-forum-blue !important;
+        cursor:pointer;
+    }
 }
 
 .forum .theme:hover  .t-title, .forum .theme:hover .t-foreword, .forum .theme:hover .t-last-com
 {
-    color:@color-white;
+    @media (max-width: @screen-xs-max) {
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        color:@color-white;
+    }
 }
 
 .forum .theme:hover .t-info {
-    color:#989898;
+    @media (max-width: @screen-xs-max) {
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        color:#989898;
+    }
 }
 
 .forum .theme:nth-child(2n) {
