--- a/GE.WebUI/Views/Articles/_Preview.cshtml
+++ b/GE.WebUI/Views/Articles/_Preview.cshtml
@@ -37,5 +37,5 @@
     </div>
 }
 <div class="text-center">
-    <button class="btn btn-default btn-transparent red">Все записи</button>
+    <a href="@Url.Action("list", new { controller="articles", game=ViewBag.GameTitle})" class="btn btn-default btn-transparent red">Все записи</a>
 </div>
