--- a/GE.WebAdmin/Content/sx/less/sx-pager.less
+++ b/GE.WebAdmin/Content/sx/less/sx-pager.less
@@ -1,4 +1,5 @@
 ﻿@import (reference) "colors.less";
+@import (reference) "../../../bower_components/bootstrap/less/variables.less";
 
 .sx-pager {
     list-style: outside none none;
@@ -19,6 +20,27 @@
     text-decoration:none;
     display:block;
     padding:0 10px;
+    margin-left:5px !important;
+    transition:all 0.05s;
+}
+.sx-pager > li:first-child > a{
+    margin-left:0 !important;
+}
+
+.sx-pager > li > a:hover {
+    @media (max-width: @screen-xs-max) {
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+        background-color:@color-orange;
+        color:@color-white;
+    }
 }
 
 .sx-pager-progress{
