--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -110,3 +110,14 @@
 .m-info .like span.up{
     margin-right:@def-pad*2;
 }
+
+.mat-fwd{
+    margin:0;
+    padding:10px;
+    margin-top:@def-pad*2;
+    background-color:@color-white;
+    border-left-color:@color-red;
+    font-size:1em;
+    padding-right:@def-pad;
+    font-style:italic;
+}
