--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -1,7 +1,8 @@
 ﻿@import (reference) "colors.less";
 @import (reference) "sizes.less";
 
-@import "//fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=cyrillic,latin";
+/*@import "//fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=cyrillic,latin";*/
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic&subset=latin,cyrillic);
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 html {
@@ -10,7 +11,8 @@ html {
 }
 
 body {
-    font-family: 'Open Sans Condensed';
+    font-family: 'Roboto Condensed', sans-serif;
+    /*font-family: 'Open Sans Condensed';*/
     color: @color-black;
     background-color: @color-bg;
 }
