--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -9,21 +9,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     @if (!Request.IsLocal)
     {
         <meta name='yandex-verification' content='6ffb2f4165dc2f9b' />
     }
-    <meta name="description" content="@ViewBag.Description" />
-    <meta name="keywords" content="@ViewBag.Keywords" />
+    @if (ViewBag.Description != null)
+    {
+        <meta name="description" content="@ViewBag.Description" />
+        <meta property="og:description" content="@ViewBag.Description" />
+    }
+    @if (ViewBag.Keywords != null)
+    {
+        <meta name="keywords" content="@ViewBag.Keywords" />
+    }
     <title>@ViewBag.Title</title>
+    <meta property="og:title" content="@ViewBag.Title"/>
+
     <link rel="shortcut icon" href="@(faveicon!=null?faveicon:"/content/dist/i/faveicon.png")" type="image/png" />
 
-    <link href="~/Content/dist/css/site.min.css" rel="stylesheet">
+    <link href="~/Content/dist/css/site.min.css" rel="stylesheet" async />
     @RenderSection("styles", false)
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
