--- a/GE.WebAdmin/Views/News/Edit.cshtml
+++ b/GE.WebAdmin/Views/News/Edit.cshtml
@@ -7,12 +7,14 @@
 <h2>@ViewBag.Title</h2>
 @if (!isNew)
 {
-    <form method="post" action="delete">
-        @Html.HiddenFor(x => x.Id)
-        @Html.HiddenFor(x => x.ModelCoreType)
-        @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-danger pull-right">Удалить новость</button>
-    </form>
+    <div class="text-right">
+        <form method="post" action="delete">
+            @Html.HiddenFor(x => x.Id)
+            @Html.HiddenFor(x => x.ModelCoreType)
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-danger" onclick="if (!confirm('Удалить запись?')) { return false;}">Удалить новость</button>
+        </form>
+    </div>
 }
 <br />
 <form method="post" action="@Url.Action(MVC.News.Edit())">
@@ -21,16 +23,28 @@
     @Html.HiddenFor(x => x.Id)
     @Html.HiddenFor(x => x.ModelCoreType)
     @Html.HiddenFor(x => x.OldTitleUrl)
+    @if (!isNew)
+    {
+        @Html.HiddenFor(x => x.UserId)
+    }
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-@(isNew?12:9)">
             @Html.LabelFor(x => x.Title, new { @class = "control-label" })
             @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(x => x.Title)
         </div>
+        @if (!isNew)
+        {
+            <div class="col-md-3">
+                @Html.LabelFor(x => x.DateOfPublication, new { @class = "control-label" })
+                @Html.EditorFor(x => x.DateOfPublication, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите дату публикации" } })
+                @Html.ValidationMessageFor(x => x.DateOfPublication)
+            </div>
+        }
     </div>
     <br />
-    @if (!isNew && !string.IsNullOrEmpty(Model.TitleUrl))
+    @if (!isNew && !string.IsNullOrEmpty(Model.TitleUrl) && User.IsInRole("architect"))
     {
         <div class="row">
             <div class="col-md-12">
