--- a/GE.WebAdmin/Content/sx/less/sx-pager.less
+++ b/GE.WebAdmin/Content/sx/less/sx-pager.less
@@ -27,7 +27,7 @@
     margin-left:0 !important;
 }
 
-.sx-pager > li > a:hover {
+.sx-pager > li > a:hover, .sx-pager > li.active > a {
     @media (max-width: @screen-xs-max) {
     }
 
