--- a/GE.WebAdmin/Views/Menues/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Menues/_GridView.cshtml
@@ -9,7 +9,7 @@
 @Html.SxGridView(
         new SxExtantions.SxGridViewSettings<VMMenu>
     {
-        UpdateTargetId = "grid-articles",
+        UpdateTargetId = "grid-menues",
         Data = Model,
         Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="Name", Caption="Наименование"},
