--- a/GE.WebAdmin/Content/less/site.less
+++ b/GE.WebAdmin/Content/less/site.less
@@ -2,11 +2,12 @@
 @import "sb-admin-2.less";
 @import "bootstrap-ext.less";
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic&subset=latin,cyrillic);
 
 body {
-    font-family: 'Open Sans Condensed';
+    font-family: 'Roboto Condensed', sans-serif;
     color: @color-black;
+    font-size:13px;
 }
 
 #footer {
