--- a/GE.WebAdmin/Views/Manuals/Index.cshtml
+++ b/GE.WebAdmin/Views/Manuals/Index.cshtml
@@ -9,6 +9,14 @@
         <div class="col-md-2 scrollspy">
             <ul id="nav" class="list-unstyled hidden-xs hidden-sm" data-spy="affix">
                 <li>
+                    <a href="#user-roles"> Система доступа</a>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#user-roles">Роли</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#metatags">SEO оптимизация</a>
                     <ul class="list-unstyled">
                         <li>
@@ -34,6 +42,50 @@
         </div>
         <div class="col-md-10">
             <div class="html">
+                <section>
+                    <div id="user-roles">
+                        <h2 class="text-primary">Система доступа</h2>
+                        <h3>Роли</h3>
+                        <p>Каждый зарегистрированный пользователь сайта по-умолчанию наследует роль "user". Данная роль предоставляет возвможность комментировать материалы, оставлять лайки и пр. Все роли и права пользователей, наследуемых от этих ролей представлены в таблице ниже:</p>
+                        <table class="table table-striped table-bordered table-condensed">
+                            <caption>Роли пользователей</caption>
+                            <thead>
+                                <tr>
+                                    <th>Роль</th>
+                                    <th>Назначение роли</th>
+                                    <th>Права пользователя роли</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>architect</td>
+                                    <td>Модератор сайта</td>
+                                    <td>Предоставлены неограниченные возможности</td>
+                                </tr>
+                                <tr>
+                                    <td>admin</td>
+                                    <td>Администратор сайта</td>
+                                    <td>Предоставлены неограниченные возможности, кроме доступа к конструктору меню сайта и seo</td>
+                                </tr>
+                                <tr>
+                                    <td>author</td>
+                                    <td>Автор материалов сайта</td>
+                                    <td>Создание, редактирование, материалов. Доступа к изменению канонических ссылок нет</td>
+                                </tr>
+                                <tr>
+                                    <td>seo</td>
+                                    <td>seo специалист</td>
+                                    <td>Любые операции по seo оптимизации сайта</td>
+                                </tr>
+                                <tr>
+                                    <td>user</td>
+                                    <td>Пользователь сайта</td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
                 <section>
                     <div id="metatags">
                         <h2 class="text-primary">SEO оптимизация</h2>
