--- a/GE.WebAdmin/Views/Clicks/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Clicks/_GridView.cshtml
@@ -8,18 +8,19 @@
 
 @Html.SxGridView(
                     new SxExtantions.SxGridViewSettings<VMClick>
-    {
-        UpdateTargetId = "grid-clicks",
-        Data = Model,
-        Columns = new SxExtantions.SxGridViewColumn[]{
+                    {
+                        UpdateTargetId = "grid-clicks",
+                        Data = Model,
+                        Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="DateCreate", Caption="Дата"},
             new SxExtantions.SxGridViewColumn{FieldName="UrlRef", Caption="Исходящий адрес"},
             new SxExtantions.SxGridViewColumn{FieldName="RawUrl", Caption="Адрес назначения"},
             new SxExtantions.SxGridViewColumn{FieldName="ClickTypeName", Caption="Статистика клика"}
         },
-        Filter = filter,
-        SortDirections = sortDirections,
-        EnableEditing=false
-    },
+                        Filter = filter,
+                        SortDirections = sortDirections,
+                        EnableEditing = false,
+                        EnableCreate = false
+                    },
         new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
