--- a/GE.WebAdmin/Views/Request/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Request/_GridView.cshtml
@@ -27,7 +27,8 @@
         },
             Filter = filter,
             SortDirections = sortDirections,
-            EnableEditing=false
-        },
+            EnableEditing = false,
+            EnableCreate = false
+    },
             new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
