--- a/GE.WebUI/Views/Error/NotFound.cshtml
+++ b/GE.WebUI/Views/Error/NotFound.cshtml
@@ -1,43 +1,19 @@
 ﻿@{
+    Layout=MVC.Shared.Views._Errors;
     ViewBag.Title = "Страница не найдена";
 }
+<div class="e-txt">Ошибка <span class="e-num">404</span></div>
+<div class="e-mes">Страница не существует или она была удалена</div>
 
-<div class="error-page">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="err-txt">
-                Ошибка
-            </div>
-        </div>
-        <div class="col-md-6">
-            &nbsp;
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="err-code">
-                404
-            </div>
-        </div>
-        <div class="col-md-6">
-            &nbsp;
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            Страница не существует или она была удалена
-        </div>
-        <div class="col-md-6">
-            &nbsp;
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <br />
-            <a href="/" class="btn btn-default btn-transparent dark-blue">Продолжить серфинг</a>
-        </div>
-        <div class="col-md-6">
-            &nbsp;
-        </div>
-    </div>
-</div>
+<ul class="e-menu">
+    <li>
+        <a href="/">На главную</a>
+    </li>
+    <li>
+        <a href="@Url.Action(MVC.News.List())">Новости</a>
+    </li>
+    <li>
+        <a href="@Url.Action(MVC.Articles.List())">Статьи</a>
+    </li>
+
+</ul>
