--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -114,10 +114,16 @@
 .mat-fwd{
     margin:0;
     padding:10px;
+    padding-bottom:@def-pad;
     margin-top:@def-pad*2;
     background-color:@color-white;
     border-left-color:@color-red;
     font-size:1em;
     padding-right:@def-pad;
     font-style:italic;
+}
+
+.mat-fwd > .ann{
+    font-style:normal;
+    margin-bottom: @def-pad;
 }
