--- a/GE.WebUI/Views/Shared/_Foreword.cshtml
+++ b/GE.WebUI/Views/Shared/_Foreword.cshtml
@@ -2,7 +2,10 @@
 @{ 
     Layout = null;
 }
+
+
 <blockquote class="mat-fwd">
+    <h2 class="ann">Аннотация</h2>
     <p>@Model.Foreword</p>
     <p>Автор материала: <strong>@Model.UserNikName</strong> </p>
 </blockquote>
