--- a/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
+++ b/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
@@ -7,7 +7,10 @@
     var mct = (SX.WebCore.Enums.ModelCoreType)ViewBag.ModelCoreType;
 }
 
-<h3>Теги</h3>
+<h3>Облако тегов для материала</h3>
+<blockquote>
+    Теги должны содержать основные слова, которые могут содержаться в облаке тегов сайта.
+</blockquote>
 @Html.SxGridView(
         new SxExtantions.SxGridViewSettings<VMMaterialTag>
         {
