--- a/GE.WebAdmin/Views/SeoInfo/Edit.cshtml
+++ b/GE.WebAdmin/Views/SeoInfo/Edit.cshtml
@@ -27,38 +27,7 @@
         </div>
     </div>
     <br />
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.SeoTitle, new { @class = "control-label" })
-            <span class="text-info"> (тег Title)</span>
-            @Html.EditorFor(x => x.SeoTitle, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок страницы" } })
-            @Html.ValidationMessageFor(x => x.SeoTitle)
-        </div>
-    </div>
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            @Html.LabelFor(x => x.SeoDescription, new { @class = "control-label" })
-            <span class="text-info"> (тег Description)</span>
-            @Html.EditorFor(x => x.SeoDescription, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите описание страницы" } })
-            @Html.ValidationMessageFor(x => x.SeoDescription)
-        </div>
-    </div>
-    <br />
-    <div class="row">
-        <div class="col-md-9">
-            @Html.LabelFor(x => x.H1, new { @class = "control-label" })
-            <span class="text-info"> (тег h1)</span>
-            @Html.EditorFor(x => x.H1, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите тег h1" } })
-            @Html.ValidationMessageFor(x => x.H1)
-            <div class="text-info">Тег отображается непосредственно перед началом любого полезного контента страницы. В случае, если для материалов предусмотррен тег h1 в теле материала, этот тег заменяется заданным здесь.</div>
-        </div>
-        <div class="col-md-3">
-            @Html.LabelFor(x => x.H1CssClass, new { @class = "control-label" })
-            @Html.EditorFor(x => x.H1CssClass, new { htmlAttributes = new { @class = "form-control", @placeholder = "Css стиль тега h1" } })
-            @Html.ValidationMessageFor(x => x.H1CssClass)
-        </div>
-    </div>
+    @Html.Partial(MVC.SeoInfo.Views._GeneralEdit)
     <br />
     <div class="col-md-12">
         <div class="row">
