--- a/GE.WebUI/Content/less/list-news.less
+++ b/GE.WebUI/Content/less/list-news.less
@@ -7,6 +7,7 @@
     background-color: @color-white;
     height:100%;
     display:inline-table;
+    width:100%;
     @media (max-width: @screen-xs-max) {
         margin-top: @def-pad*2;
         width:100%;
