--- a/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
+++ b/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
@@ -12,7 +12,7 @@
 }
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 hidden-sm">
         <figure class="mat-f-p">
             @if (Model.FrontPictureId != null)
             {
